# esp32-exemplo-arquitetura-mqtt-wifi

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/include/: config.h
main/include/hc_sr04_modulo/: hc_sr04_modulo.c  hc_sr04_modulo.h
main/include/mh_sensor_modulo/: mh_sensor_modulo.c  mh_sensor_modulo.h
main/include/sg90_modulo/: sg90_modulo.c  sg90_modulo.h
